--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,3 +30,12 @@ body {
 .Transaction {
     padding:5%;
 }
+
+.ConductTransaction, .TransactionPool {
+    margin: 10%;
+}
+
+a,a:hover {
+    color: #e66;
+    text-decoration: underline;
+}
